--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
   "authors": [
     "Jonathan Warrick"
   ],
-  "description": "An introduction to using the Angular-Google-Maps directives.",
+  "description": "Integrating Angular Google Maps directive with Google Maps/Places API.",
   "dependencies": {
     "angular": "~1.2.25",
     "lodash": "~2.4.1",
